# mpp_linux_cpp

./: CMakeLists.txt  README.md  main.cpp
mpp/: Codec.cpp  Codec.h
rkdrm/: dev.c
rkrga/: RGA.cpp  RGA.h
thread/: Thread.cpp  Thread.h
